--- a/sass/blocks/price.scss
+++ b/sass/blocks/price.scss
@@ -1,13 +1,12 @@
 .price {
   margin-bottom: 20px;
   padding-top: 67px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-bottom: 40px;
   background-color: $grey-bg;
 }
 
 .price__table {
-  width: $width;
+  @include container;
   border-collapse: collapse;
   margin-bottom: 40px;
   margin-left: auto;
@@ -19,7 +18,16 @@
   padding-top: 10px;
   padding-bottom: 10px;
   background-color: $dark-blue;
+  border: 2px solid #e5e5e5;
   text-align: center;
+}
+
+.price__table-empty {
+  display: none;
+}
+
+.price__table-header:not(:nth-child(3)) {
+  display: none;
 }
 
 .price__table-plan {
@@ -44,12 +52,43 @@
   padding-top: 10px;
   padding-bottom: 10px;
   padding-left: 25px;
+  border: 2px solid #e5e5e5;
   font-size: 14px;
   line-height: 30px;
   color: $dark-blue;
   text-transform: uppercase;
 }
 
+.price__table-row:not(:nth-child(1)) {
+  display: none;
+}
+
 .price__radiobuttons {
   text-align: center;
+}
+
+@media (min-width: 700px) {
+  .price__table-row:not(:nth-child(1)),
+  .price__table-header:not(:nth-child(3)),
+  .price__table-empty {
+    display: table-cell;
+  }
+
+  .price__table-empty {
+    background-color: $grey-bg;
+    border: 2px solid $grey-bg;
+  }
+
+  .price__table-row {
+    width: 25%;
+    text-transform: none;
+  }
+
+  .price__table-header {
+    width: 25%;
+  }
+
+  .price__radiobuttons {
+    display: none;
+  }
 }
