--- a/sass/blocks/download.scss
+++ b/sass/blocks/download.scss
@@ -18,3 +18,12 @@
   line-height: 24px;
   text-align: center;
 }
+
+@media (min-width: 700px) {
+  .download {
+    position: absolute;
+    top: 267px;
+    width: 300px;
+    background: transparent;
+  }
+}
