--- a/sass/blocks/image-logo.scss
+++ b/sass/blocks/image-logo.scss
@@ -1,5 +1,17 @@
 .image-logo {
+  width: 150px;
+  height: 41px;
   margin-top: 40px;
   margin-bottom: 40px;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
+}
+
+@media (min-width: 700px) {
+  .image-logo {
+    display: inline-block;
+    vertical-align: top;
+    margin: 0;
+  }
 }
