--- a/sass/blocks/intro.scss
+++ b/sass/blocks/intro.scss
@@ -2,19 +2,18 @@
   height: 396px;
   padding-top: 30px;
   background-color: $dark-blue;
-  background-image:
-    url("../../img/iphone-hand-mobile@1x.png"),
-    url("../../img/bg-back-mobile@1x.jpg");
+  background:
+    url("../img/iphone-hand-mobile@1x.png"),
+    url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: bottom;
-  color: #fff;
-  font-size: 24px;
-  font-weight: lighter;
-  line-height: 30px;
-  color: #fff;
-  text-align: center;
 }
 
-.intro__message {
-  margin: 0;
+
+
+@media (min-width: 700px) {
+  .intro {
+    display: none;
+  }
+
 }
