--- a/sass/blocks/review-block.scss
+++ b/sass/blocks/review-block.scss
@@ -1,4 +1,5 @@
 .review-block {
+  @include container;
   padding-bottom: 60px;
   background-color: #fff;
   color: $dark-blue;
@@ -9,6 +10,8 @@
 }
 
 .review-block__item-name {
+  display: block;
+  margin: 0;
   font-size: 18px;
   line-height: 30px;
   font-weight: bold;
@@ -20,6 +23,39 @@
   font-weight: lighter;
 }
 
+.review-block__item-name-descr {
+  display: none;
+  margin: 0;
+  font-size: 14px;
+  line-height: 30px;
+}
+
 .review-block__radiobuttons {
+  margin-top: 20px;
   text-align: center;
+}
+
+@media (min-width: 700px) {
+  .review-block__item-name-descr {
+    display: block;
+    transform: translateY(120px);
+  }
+
+  .review-block__item-content {
+    font-size: 18px;
+    transform: translateY(-80px);
+  }
+
+  .review-block__item-name {
+    font-size: 20px;
+    transform: translateY(120px);
+  }
+}
+
+@media (min-width: 1200px) {
+  .review-block__item-content {
+    width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
