--- a/sass/blocks/social.scss
+++ b/sass/blocks/social.scss
@@ -1,8 +1,27 @@
 .social {
+  min-height: 31px;
+  padding-top: 10px;
   margin-bottom: 45px;
   text-align: center;
+  font-size: 14px;
 }
 
 .social-item {
   display: inline-block;
+  vertical-align: top;
+}
+
+@media (min-width: 700px) {
+  .social {
+    display: inline-block;
+    vertical-align: top;
+    width: 320px;
+    margin: 0;
+  }
+}
+
+@media (min-width: 1200px) {
+  .social {
+    width: 620px;
+  }
 }
