--- a/sass/mixins.scss
+++ b/sass/mixins.scss
@@ -1,3 +1,22 @@
+@mixin clearfix() {
+  &::after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+}
+
+@mixin container() {
+  width: 320px;
+  margin: 0 auto;
+  @media (min-width: 700px) {
+    width: 620px;
+  }
+  @media (min-width: 1200px) {
+    width: 940px;
+  }
+}
+
 @mixin button() {
   display: block;
   box-sizing: border-box;
