--- a/sass/style.scss
+++ b/sass/style.scss
@@ -30,6 +30,7 @@
 @import "blocks/popup-btn.scss";
 @import "blocks/post-btn.scss";
 @import "blocks/price.scss";
+@import "blocks/price-table.scss";
 @import "blocks/review-block.scss";
 @import "blocks/social.scss";
 @import "blocks/text-default.scss";
