--- a/sass/blocks/contest-form.scss
+++ b/sass/blocks/contest-form.scss
@@ -17,6 +17,7 @@
 .contest-form__contacts {
   @include container;
   margin-bottom: 54px;
+  border-style: none;
 }
 
 .contest-form__contacts .contest-form__title {
@@ -30,12 +31,14 @@
   padding-right: 20px;
   margin-bottom: 35px;
   background-color: $grey-bg;
+  border-style: none;
 }
 
 .contest-form__emotions {
   @include container;
   margin-top: 60px;
   margin-bottom: 48px;
+  border-style: none;
 }
 
 .contest-form__app {
@@ -44,6 +47,7 @@
   padding-left: 20px;
   padding-right: 20px;
   background-color: $grey-bg;
+  border-style: none;
 }
 
 .contest-form__title {
@@ -56,11 +60,21 @@
   line-height: 18px;
   color: $pink;
   text-align: center;
+  text-transform: uppercase;
 }
 
 .contest-form__label {
   display: block;
-  margin-left: 43px;
+  width: 280px;
+  margin-bottom: 10px;
+  font-size: 14px;
+  line-height: 30px;
+  color: $pink;
+  text-transform: uppercase;
+}
+
+.contest-form__label-double {
+  display: none;
   margin-bottom: 10px;
   font-size: 14px;
   line-height: 30px;
@@ -111,6 +125,14 @@
 }
 
 @media (min-width: 700px) {
+  .contest-form__label-double {
+    display: block;
+  }
+
+  .contest-form__label {
+    display: none;
+  }
+
   .contest-form__full-name {
     font-size: 0;
   }
@@ -132,7 +154,6 @@
 
   .contest-form__app .contest-form__list {
     margin-left: 60px;
-    transform: translateY(-25px);
   }
 
   .contest-form__app .contest-form__title {
@@ -140,7 +161,6 @@
     margin-left: auto;
     margin-right: auto;
     background-color: #fff;
-    transform: translateY(-25px);
   }
 
   .contest-form__app {
@@ -168,7 +188,6 @@
 
   .contest-form__achievements .contest-form__list {
     margin-left: 60px;
-    transform: translateY(-25px);
   }
 
   .contest-form__achievements .contest-form__title {
@@ -177,7 +196,6 @@
     margin-left: auto;
     margin-right: auto;
     background-color: #fff;
-    transform: translateY(-25px);
   }
 
   .contest-form__contacts {
@@ -186,11 +204,11 @@
   }
 
   .contest-form__contacts .contest-form__title {
+    display: block;
     width: 260px;
     margin-left: auto;
     margin-right: auto;
     background-color: #fff;
-    transform: translateY(-25px);
   }
 
   .contest-form__contacts .contest-form__input {
@@ -211,12 +229,10 @@
     margin-left: auto;
     margin-right: auto;
     background-color: #fff;
-    transform: translateY(-25px);
   }
 
   .contest-form__textarea {
     width: 500px;
-    transform: translateY(-25px);
   }
 
   .contest-form__submit-area {
