--- a/sass/blocks/hero-area.scss
+++ b/sass/blocks/hero-area.scss
@@ -19,6 +19,7 @@
 @media (min-width: 700px) {
   .hero-area {
     min-height: 619px;
+    margin-top: -66px;
     background: $dark-blue url("../img/bg-back-mobile@1x.jpg");
     background-repeat: no-repeat;
     background-position: center;
