--- a/sass/blocks/page-title.scss
+++ b/sass/blocks/page-title.scss
@@ -1,7 +1,8 @@
 .page-title {
-  padding-top: 35px;
+  padding-top: 85px;
   padding-bottom: 53px;
-  background: $dark-blue url("../../img/bg-back-mobile@1x.jpg") no-repeat center;
+  margin-top: -66px;
+  background: $dark-blue url("../img/bg-back-mobile@1x.jpg") no-repeat center;
   background-size: cover;
 }
 
