--- a/sass/blocks/download.scss
+++ b/sass/blocks/download.scss
@@ -1,8 +1,8 @@
 .download {
+  box-sizing: border-box;
   min-height: 200px;
   padding-top: 28px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-bottom: 30px;
   background-color: #1d2631;
   color: #fff;
 }
@@ -25,5 +25,9 @@
     top: 267px;
     width: 300px;
     background: transparent;
+  }
+
+  .download__text {
+    font-size: 18px;
   }
 }
