--- a/sass/blocks/main-info.scss
+++ b/sass/blocks/main-info.scss
@@ -22,6 +22,7 @@
 }
 
 .main-info__feature-item {
+  box-sizing: border-box;
   margin-top: 40px;
   text-align: center;
 }
@@ -31,18 +32,21 @@
 }
 
 .main-info__features-wrapper {
+  display: flex;
+  flex-direction: column;
   box-sizing: border-box;
   @include container;
 }
 
 .main-info__feature-item-title {
   font-weight: bold;
-  font-size: 18 px;
+  font-size: 18px;
   line-height: 24px;
 }
 
 .main-info__feature-item-descr {
   margin: 0;
+  margin-top: 10px;
   font-size: 14px;
   line-height: 24px;
 }
@@ -95,7 +99,8 @@
   }
 
   .main-info__features-wrapper {
-    padding-left: 310px;
+    align-items: flex-end;
+    /*padding-left: 310px;*/
   }
 
   .main-info__effect {
@@ -112,22 +117,30 @@
 
 
   .main-info__features-wrapper {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: stretch;
     padding-left: 0;
-    font-size: 0;
   }
 
   .main-info__feature-item {
-    display: inline-block;
-    vertical-align: top;
     width: 300px;
     margin: 0;
-    margin-right: 20px;
     padding-top: 360px;
+    padding-left: 25px;
+    padding-right: 25px;
     text-align: center;
   }
 
-  .main-info__feature-item:nth-child(3n) {
-    margin-right: 0;
+  .main-info__feature-item-title {
+    font-size: 30px;
+    line-height: 30px;
+  }
+
+  .main-info__feature-item-descr {
+    font-size: 18px;
+    line-height: 30px;
+    margin-top: 20px;
   }
 
   .main-info__effect {
@@ -137,5 +150,19 @@
   .main-info__effect-wrapper {
     padding-left: 370px;
     padding-top: 50px;
+  }
+
+  .main-info__effect-title {
+    line-height: 30px;
+  }
+
+  .main-info__effect-descr {
+    font-size: 18px;
+    line-height: 30px;
+  }
+
+  .main-info__effect-more {
+    font-size: 18px;
+    line-height: 30px;
   }
 }
