--- a/sass/blocks/page-descr.scss
+++ b/sass/blocks/page-descr.scss
@@ -1,6 +1,6 @@
 .page-descr {
   padding-top: 35px;
-  padding-bottom: 53px;
+  padding-bottom: 50px;
 }
 
 .page-descr__text {
@@ -12,10 +12,22 @@
   text-align: center;
 }
 
+.page-descr__additional-text {
+  display: none;
+}
+
 @media (min-width: 700px) {
+  .page-descr {
+    padding-bottom: 75px;
+  }
+
   .page-descr__text {
     width: 500px;
     font-size: 18px;
+  }
+
+  .page-descr__additional-text {
+  display: inline;
   }
 }
 
