--- a/sass/blocks/photo-block.scss
+++ b/sass/blocks/photo-block.scss
@@ -1,6 +1,9 @@
 .photo-block {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
   width: $width;
-  margin: 20px auto;
+  margin-bottom: 20px;
   font-family: "Open Sans", "Arial", sans-serif;
 }
 
@@ -8,7 +11,7 @@
 .photo-block__comment {
   box-sizing: border-box;
   width: $width;
-  margin: 0 auto;
+  flex-grow: 1;
   padding-left: 18px;
   padding-right: 18px;
   padding-top: 25px;
@@ -54,15 +57,9 @@
 
 @media (min-width: 700px) {
   .photo-block {
-    display: inline-block;
-    vertical-align: top;
+    align-self: auto;
     width: 300px;
-    height: 455px;
-    margin-right: 20px;
-  }
-
-  .photo-block:nth-child(2n) {
-    margin-right: 0;
+    min-height: 455px;
   }
 
   .photo-block__img {
@@ -76,12 +73,6 @@
 }
 
 @media (min-width: 1200px) {
-  .photo-block:nth-child(2n) {
-    margin-right: 20px;
-  }
 
-  .photo-block:nth-child(3n) {
-    margin-right: 0;
-  }
 }
 
