--- a/sass/blocks/main-nav.scss
+++ b/sass/blocks/main-nav.scss
@@ -1,6 +1,10 @@
+.main-nav--closed {
+  display: none;
+}
+
 .main-nav__list {
   display: flex;
-  display: none;
+
   flex-direction: column;
   list-style: none;
   margin: 0;
@@ -10,6 +14,7 @@
 }
 
 .main-nav__item {
+  position: relative;
   box-sizing: border-box;
   padding-top: 17px;
   padding-bottom: 17px;
@@ -22,7 +27,19 @@
   font-size: 18px;
   color: #fff;
   text-decoration: none;
+
+  &:hover {
+    color: $pink;
+  }
+
+  &:active {
+    color: rgba(210, 40, 86, 0.3);
+  }
+
+
 }
+
+
 
 
 @media (min-width: 1200px) {
@@ -45,138 +62,46 @@
 
   .main-nav__link {
     font-weight: normal;
+
+    &:active {
+      color: rgba(256, 256, 256, 0.3);
+    }
+
+    &--active::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 2px;
+      background-color: #fff;
+    }
+
+    &--active:hover::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 2px;
+      background-color: $pink;
+    }
+
+    &--active:active::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 2px;
+      background-color: rgba(256, 256, 256, 0.3);
+    }
+  }
+
+  .main-nav--closed {
+    display: block;
   }
 }
 
 
-/*.main-nav {
-  box-sizing: border-box;
-  margin: 0 auto;
-
-}
-
-.main-nav__wrapper {
-  position: relative;
-  z-index: 2;
-  background-color: rgba(0, 0, 0, 0.3);
-}
-
-.main-nav__short-menu {
-  width: 320px;
-  margin: 0 auto;
-  position: relative;
-  padding-top: 21px;
-  padding-bottom: 25px;
-  border-bottom: 1px solid #000;
-}
-
-.main-nav__short-menu--closed {
-
-  border-style: none;
-}
-
-.main-nav__toggle {
-  position: absolute;
-  width: 50px;
-  height: 25px;
-  right: 20px;
-  top: 20px;
-  font-size: 0;
-}
-
-
-.main-nav__short-menu--closed .main-nav__toggle::before {
-  position: absolute;
-  content: "";
-  width: 50px;
-  height: 4px;
-  background-color: #ffffff;
-  box-shadow: 0 8px 0 0 #ffffff,
-              0 16px 0 0 #ffffff;
-  right: 0px;
-  top: 5px;
-}
-
-.main-nav__short-menu--open .main-nav__toggle {
-  width: 26px;
-  right: 20px;
-  top: 30px;
-
-  &::before,
-  &::after {
-    content: "";
-    position: absolute;
-    width: 30px;
-    height: 4px;
-    background-color: #ffffff;
-  }
-
-  &::after {
-    transform: rotate(45deg);
-  }
-
-  &::before {
-    transform: rotate(-45deg);
-  }
-}
-
-.main-nav__list {
-  display: flex;
-  display: none;
-  flex-direction: column;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  text-align: center;
-}
-
-.main-nav__item {
-  box-sizing: border-box;
-  padding-top: 17px;
-  padding-bottom: 17px;
-  border-top: 1px solid #485461;
-  border-bottom: 1px solid #000;
-}
-
-.main-nav__link {
-  font-weight: bold;
-  font-size: 18px;
-  color: #fff;
-  text-decoration: none;
-}
-
-@media (min-width: 700px){
-  .main-nav {
-    width: auto;
-  }
-
-  .main-nav__short-menu {
-    @include container;
-  }
-}
-
-@media (min-width: 1200px) {
-
-  .main-nav__list {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    width: 940px;
-    margin: 0 auto;
-    text-transform: none;
-  }
-
-  .main-nav__item {
-    margin-left: 82px;
-    border-style: none;
-  }
-
-  .main-nav__link {
-    font-weight: normal;
-  }
-
-  .main-nav__short-menu {
-    display: none;
-  }
-}*/
 
