--- a/sass/blocks/btn-non-active.scss
+++ b/sass/blocks/btn-non-active.scss
@@ -1,6 +1,17 @@
 .btn-non-active {
   color: #dddfe0;
   border: 3px solid #dddfe0;
+
+  &:hover {
+    color: rgba(40, 54, 69, 0.3);
+    border: 3px solid rgba(40, 54, 69, 0.3);
+  }
+
+  &:active {
+    background-color: rgba(40, 54, 69, 0.3);
+    color: rgba(256, 256, 256, 0.3);
+    border: 3px solid rgba(40, 54, 69, 0);
+  }
 }
 
 @media (min-width: 1200px) {
