--- a/sass/blocks/contest-form.scss
+++ b/sass/blocks/contest-form.scss
@@ -15,6 +15,7 @@
 }
 
 .contest-form__list-item {
+  position: relative;
   margin-bottom: 40px;
 }
 
@@ -75,6 +76,95 @@
   width: $width;
 }
 
+.contest-form__checkbox {
+  display: none;
+}
+
+.contest-form__label-checkbox {
+  margin-left: 70px;
+  font-size: 18px;
+  line-height: 30px;
+  color: $dark-blue;
+}
+
+input[type="checkbox"] + .contest-form__label-checkbox::before {
+  content: "";
+  position: absolute;
+  top: -3px;
+  left: 0;
+  width: 35px;
+  height: 35px;
+  border: 2px solid #e5e5e5;
+  border-radius: 2px;
+  background: #fff;
+  background-size: 22px auto;
+}
+
+input[type="checkbox"] + .contest-form__label-checkbox:hover::before {
+  content: "";
+  position: absolute;
+  top: -3px;
+  left: 0;
+  width: 35px;
+  height: 35px;
+  border: 2px solid $dark-blue;
+  border-radius: 2px;
+  background: #fff;
+  background-size: 22px auto;
+}
+
+input[type="checkbox"] + .contest-form__label-checkbox:active::before {
+  content: "";
+  position: absolute;
+  top: -3px;
+  left: 0;
+  width: 35px;
+  height: 35px;
+  border: 2px solid $pink;
+  border-radius: 2px;
+  background: #fff;
+  background-size: 22px auto;
+}
+
+input[type="checkbox"]:checked + .contest-form__label-checkbox::before {
+  content: "";
+  position: absolute;
+  top: -3px;
+  left: 0;
+  width: 35px;
+  height: 35px;
+  border: 2px solid #e5e5e5;
+  border-radius: 2px;
+  background: #fff url("../img/icon-yes.svg") no-repeat center;
+  background-size: 22px auto;
+}
+
+input[type="checkbox"]:checked + .contest-form__label-checkbox:hover::before {
+  content: "";
+  position: absolute;
+  top: -3px;
+  left: 0;
+  width: 35px;
+  height: 35px;
+  border: 2px solid $dark-blue;
+  border-radius: 2px;
+  background: #fff url("../img/icon-yes.svg") no-repeat center;
+  background-size: 22px auto;
+}
+
+input[type="checkbox"]:checked + .contest-form__label-checkbox:active::before {
+  content: "";
+  position: absolute;
+  top: -3px;
+  left: 0;
+  width: 35px;
+  height: 35px;
+  border: 2px solid $pink;
+  border-radius: 2px;
+  background: #fff url("../img/icon-yes.svg") no-repeat center;
+  background-size: 22px auto;
+}
+
 .contest-form__app {
   box-sizing: border-box;
   margin: 0;
@@ -90,6 +180,104 @@
   display: flex;
   flex-direction: column;
   width: $width;
+}
+
+.contest-form__radio {
+  display: none;
+}
+
+.contest-form__label-radio {
+  margin-left: 70px;
+}
+
+input[type="radio"]:checked + .contest-form__label-radio::before {
+  content: "";
+  position: absolute;
+  top: -5px;
+  left: 0;
+  width: 35px;
+  height: 35px;
+  border: 2px solid #e5e5e5;
+  border-radius: 50%;
+  background: #fff;
+  background-size: 22px auto;
+}
+
+input[type="radio"]:checked + .contest-form__label-radio:hover::before {
+  content: "";
+  position: absolute;
+  top: -5px;
+  left: 0;
+  width: 35px;
+  height: 35px;
+  border: 2px solid $dark-blue;
+  border-radius: 50%;
+  background: #fff;
+  background-size: 22px auto;
+}
+
+input[type="radio"]:checked + .contest-form__label-radio:active::before {
+  content: "";
+  position: absolute;
+  top: -5px;
+  left: 0;
+  width: 35px;
+  height: 35px;
+  border: 2px solid $pink;
+  border-radius: 50%;
+  background: #fff;
+  background-size: 22px auto;
+}
+
+input[type="radio"]:checked + .contest-form__label-radio::after {
+  content: "";
+  position: absolute;
+  top: 7px;
+  left: 12px;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background: $pink;
+
+}
+
+input[type="radio"] + .contest-form__label-radio::before {
+  content: "";
+  position: absolute;
+  top: -5px;
+  left: 0;
+  width: 35px;
+  height: 35px;
+  border: 2px solid #e5e5e5;
+  border-radius: 50%;
+  background: #fff;
+  background-size: 22px auto;
+}
+
+input[type="radio"] + .contest-form__label-radio:hover::before {
+  content: "";
+  position: absolute;
+  top: -5px;
+  left: 0;
+  width: 35px;
+  height: 35px;
+  border: 2px solid $dark-blue;
+  border-radius: 50%;
+  background: #fff;
+  background-size: 22px auto;
+}
+
+input[type="radio"] + .contest-form__label-radio:active::before {
+  content: "";
+  position: absolute;
+  top: -5px;
+  left: 0;
+  width: 35px;
+  height: 35px;
+  border: 2px solid $pink;
+  border-radius: 50%;
+  background: #fff;
+  background-size: 22px auto;
 }
 
 .contest-form__emotions {
@@ -165,13 +353,18 @@
   line-height: 30px;
   border: 2px solid #e5e5e5;
   border-radius: 2px;
+
+  &:hover {
+    border: 2px solid $dark-blue;
+  }
+
+  &:focus {
+    border: 2px solid $pink;
+    outline: none;
+  }
 }
 
-.contest-form__label-checkbox {
-  font-size: 18px;
-  line-height: 30px;
-  color: $dark-blue;
-}
+
 
 
 .contest-form__required {
