--- a/sass/blocks/download-btn.scss
+++ b/sass/blocks/download-btn.scss
@@ -4,6 +4,15 @@
   border: 3px solid #fff;
   text-align: center;
   text-decoration: none;
+
+  &:hover {
+    background-color: #fff;
+    color: $pink;
+  }
+
+  &:active {
+    color: rgba(210, 40, 86, 0.3);
+  }
 }
 
 @media (min-width: 700px) {
