--- a/sass/blocks/main-header.scss
+++ b/sass/blocks/main-header.scss
@@ -10,7 +10,7 @@
   display: flex;
   position: relative;
   box-sizing: border-box;
-
+  border-bottom: 1px solid #000;
   min-height: 66px;
 
 }
@@ -18,6 +18,7 @@
 .main-header__short-menu-wrapper--closed {
   background-color: rgba(0, 0, 0, 0.3);
   margin-bottom: -66px;
+  border-style: none;
   z-index: 2;
 }
 
@@ -28,13 +29,15 @@
   align-items: center;
 }
 
-.main-header__toggle--open {
+.main-header__toggle {
   display: block;
   width: 50px;
   height: 24px;
   font-size: 0;
   background: url("../img/icon-menu-burger.svg") no-repeat;
   background-size: 50px auto;
+
+
 }
 
 .main-header__toggle--closed {
@@ -62,9 +65,7 @@
 
 }
 
-  .main-header__toggle--open {
 
-  }
 }
 
 
@@ -76,6 +77,7 @@
     z-index: 2;
   }
 
+
   .main-header__short-menu-wrapper {
     position: absolute;
     top: 27px;
@@ -84,13 +86,14 @@
     background-color: transparent;
     min-height: 0;
     padding-bottom: 0;
+    border-style: none;
   }
 
   .main-header__toggle--closed {
     display: none;
   }
 
-  .main-header__toggle--open {
+  .main-header__toggle {
     display: none;
   }
 }
