--- a/sass/blocks/review-block.scss
+++ b/sass/blocks/review-block.scss
@@ -37,7 +37,68 @@
 .review-block__radiobuttons {
   margin-top: 20px;
   text-align: center;
+  font-size: 0;
 }
+
+.review-block__radio {
+  display: none;
+}
+
+.review-block__label {
+  position: relative;
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  margin-right: 16px;
+
+  &:last-child {
+    margin-right: 0;
+  }
+}
+
+
+input[type="radio"] + .review-block__label::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 6px;
+  height: 6px;
+  background-color: rgba(40, 54, 69, 0.3);
+  border-radius: 50%;
+}
+
+input[type="radio"] + .review-block__label:hover::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 6px;
+  height: 6px;
+  background-color: rgba(40, 54, 69, 0.6);
+  border-radius: 50%;
+}
+
+input[type="radio"] + .review-block__label:active::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 6px;
+  height: 6px;
+  background-color: rgba(40, 54, 69, 0.1);
+  border-radius: 50%;
+}
+
+input[type="radio"]:checked + .review-block__label::before {
+  content: "";
+  position: absolute;
+  top: -3px;
+  left: 0;
+  width: 6px;
+  height: 6px;
+  background-color: #fff;
+  border-radius: 50%;
+  border: 3px solid $dark-blue;
+}
+
 
 @media (min-width: 700px) {
   .review-block__item-name-descr {
@@ -72,24 +133,45 @@
     position: relative;
   }
 
-  .review-block__wrapper::before {
-    content: "";
+  .review-block__arrow-left {
     position: absolute;
-    top: 50px;
+    display: block;
+    top: 50%;
+    transform: translateY(-50%);
     width: 24px;
     height: 41px;
     background: url("../img/icon-review-arrow-left.svg") no-repeat;
+    opacity: 0.3;
+
+    &:hover {
+      opacity: 0.6;
+    }
+
+    &:active {
+      opacity: 0.1;
+    }
   }
 
-  .review-block__wrapper::after {
-    content: "";
+  .review-block__arrow-right {
     position: absolute;
-    top: 50px;
+    display: block;
+    top: 50%;
+    transform: translateY(-50%);
     right: 0;
     width: 24px;
     height: 41px;
     background: url("../img/icon-review-arrow-right.svg") no-repeat;
+    opacity: 0.3;
+
+    &:hover {
+      opacity: 0.6;
+    }
+
+    &:active {
+      opacity: 0.1;
+    }
   }
+
 
   .review-block__item-content {
     width: 700px;
