--- a/sass/blocks/social.scss
+++ b/sass/blocks/social.scss
@@ -11,8 +11,17 @@
   width: 51px;
   height: 51px;
   margin-right: 12px;
-  border: 3px solid #e9ebec;
+  border: 3px solid rgba(40, 54, 69, 0.1);
   border-radius: 50%;
+
+  &:hover {
+    border: 3px solid rgb(40, 54, 69);
+  }
+
+  &:active {
+    opacity: 0.3;
+    border: 3px solid rgba(40, 54, 69, 0.3);
+  }
 }
 
 .social__item:last-child {
