--- a/sass/blocks/post-btn.scss
+++ b/sass/blocks/post-btn.scss
@@ -13,6 +13,14 @@
   }
 }
 
+@media (min-width: 700px) {
+  .post-btn {
+    width: 260px;
+    margin: 0;
+    margin-bottom: 24px;
+  }
+}
+
 @media (min-width: 1200px) {
   .post-btn {
     width: 183px;
