--- a/sass/blocks/btn-non-active.scss
+++ b/sass/blocks/btn-non-active.scss
@@ -14,6 +14,13 @@
   }
 }
 
+@media (min-width: 700px) {
+  .btn-non-active {
+    width: 260px;
+    margin: 0;
+  }
+}
+
 @media (min-width: 1200px) {
   .btn-non-active {
     width: 183px;
