--- a/sass/blocks/btn-wrapper.scss
+++ b/sass/blocks/btn-wrapper.scss
@@ -2,14 +2,15 @@
   display: flex;
   flex-direction: column;
   width: 320px;
-  margin-top: 35px;
-  padding-bottom: 20px;
+  margin-top: 40px;
+  padding-bottom: 41px;
   background-color: $grey-bg;
 }
 
 
 @media (min-width: 700px) {
   .btn-wrapper {
+    width: 275px;
     padding-bottom: 0;
     margin-top: 0;
   }
