--- a/sass/blocks/contest-form.scss
+++ b/sass/blocks/contest-form.scss
@@ -5,7 +5,15 @@
 
 .contest-form__fieldset-wrapper-1, .contest-form__fieldset-wrapper-2 {
   background-color: $grey-bg;
-  padding-top: 30px;
+  padding-top: 40px;
+}
+
+.contest-form__fieldset-wrapper-1 {
+  padding-top: 50px;
+}
+
+.contest-form__fieldset-wrapper-2 {
+  padding-top: 45px;
 }
 
 .contest-form__list {
@@ -16,7 +24,7 @@
 
 .contest-form__list-item {
   position: relative;
-  margin-bottom: 40px;
+  margin-bottom: 52px;
 }
 
 .contest-form__full-name {
@@ -34,13 +42,14 @@
 }
 
 .contest-form__contacts {
+  position: relative;
   box-sizing: border-box;
   width: $width;
   align-self: center;
   padding: 0;
   margin: 0;
-  margin-top: 35px;
-  margin-bottom: 40px;
+  margin-bottom: 35px;
+  padding-top: 30px;
   border-style: none;
 }
 
@@ -60,14 +69,17 @@
 }
 
 .contest-form__achievements {
+  position: relative;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  padding-top: 35px;
   border-style: none;
 }
 
 .contest-form__achievements-content {
   display: flex;
+  margin-top: 30px;
 }
 
 .contest-form__achievements-content .contest-form__list {
@@ -135,7 +147,7 @@ input[type="checkbox"]:checked + .contest-form__label-checkbox::before {
   height: 35px;
   border: 2px solid #e5e5e5;
   border-radius: 2px;
-  background: #fff url("../img/icon-yes.svg") no-repeat center;
+  background: #fff url("../img/icon-checkbox.svg") no-repeat center;
   background-size: 22px auto;
 }
 
@@ -148,7 +160,7 @@ input[type="checkbox"]:checked + .contest-form__label-checkbox:hover::before {
   height: 35px;
   border: 2px solid $dark-blue;
   border-radius: 2px;
-  background: #fff url("../img/icon-yes.svg") no-repeat center;
+  background: #fff url("../img/icon-checkbox.svg") no-repeat center;
   background-size: 22px auto;
 }
 
@@ -161,19 +173,22 @@ input[type="checkbox"]:checked + .contest-form__label-checkbox:active::before {
   height: 35px;
   border: 2px solid $pink;
   border-radius: 2px;
-  background: #fff url("../img/icon-yes.svg") no-repeat center;
+  background: #fff url("../img/icon-checkbox.svg") no-repeat center;
   background-size: 22px auto;
 }
 
 .contest-form__app {
+  position: relative;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  padding-top: 35px;
   border-style: none;
 }
 
 .contest-form__app-content {
   display: flex;
+  margin-top: 30px;
 }
 
 .contest-form__app-content .contest-form__list {
@@ -186,8 +201,14 @@ input[type="checkbox"]:checked + .contest-form__label-checkbox:active::before {
   display: none;
 }
 
+.contest-form__list-item--radio {
+  margin-bottom: 45px;
+}
+
 .contest-form__label-radio {
   margin-left: 70px;
+  font-size: 18px;
+  line-height: 30px;
 }
 
 input[type="radio"]:checked + .contest-form__label-radio::before {
@@ -281,21 +302,27 @@ input[type="radio"] + .contest-form__label-radio:active::before {
 }
 
 .contest-form__emotions {
+  position: relative;
   box-sizing: border-box;
   @include container;
-  margin-top: 55px;
+  margin-top: 70px;
   padding: 0;
-  padding-bottom: 50px;
+  padding-top: 25px;
+  padding-bottom: 47px;
   border-style: none;
 }
 
 
 .contest-form__textarea {
   display: block;
+  box-sizing: border-box;
   width: $width;
+  min-height: 200px;
   margin: 0 auto;
-
+  padding-top: 13px;
+  padding-left: 20px;
   border: 2px solid #e5e5e5;
+  border-radius: 2px;
   font-family: inherit;
   font-size: 18px;
   line-height: 30px;
@@ -308,10 +335,12 @@ input[type="radio"] + .contest-form__label-radio:active::before {
 }
 
 .contest-form__title {
-  width: 225px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 35px;
+  position: absolute;
+  left: 50%;
+  top: -12px;
+  width: 220px;
+  transform: translate(-50%, 0);
+
   font-size: 14px;
   font-weight: normal;
   line-height: 18px;
@@ -346,8 +375,8 @@ input[type="radio"] + .contest-form__label-radio:active::before {
   flex-grow: 1;
   height: 63px;
   align-self: center;
-  margin-bottom: 20px;
-  padding-left: 23px;
+  margin-bottom: 19px;
+  padding-left: 22px;
   font-family: inherit;
   font-size: 18px;
   line-height: 30px;
@@ -368,6 +397,7 @@ input[type="radio"] + .contest-form__label-radio:active::before {
 
 
 .contest-form__required {
+  margin-top: 35px;
   font-size: 14px;
   line-height: 30px;
   color: $dark-blue;
@@ -425,6 +455,7 @@ input[type="radio"] + .contest-form__label-radio:active::before {
 
   .contest-form__title {
     width: auto;
+    background-color: #fff;
   }
 
   .contest-form__achievements {
@@ -477,10 +508,10 @@ input[type="radio"] + .contest-form__label-radio:active::before {
   .contest-form__icon-phone {
     position: absolute;
     display: block;
-    top: 0;
-    right: 0;
-    width: 63px;
-    height: 62px;
+    top: 2px;
+    right: 2px;
+    width: 60px;
+    height: 59px;
     background: #e5e5e5 url("../img/icon-phone.svg") no-repeat center;
     background-size: 20px auto;
   }
@@ -488,10 +519,10 @@ input[type="radio"] + .contest-form__label-radio:active::before {
   .contest-form__icon-email {
     position: absolute;
     display: block;
-    top: 0;
-    right: 0;
-    width: 63px;
-    height: 62px;
+    top: 2px;
+    right: 2px;
+    width: 60px;
+    height: 59px;
     background: #e5e5e5 url("../img/icon-mail.svg") no-repeat center;
     background-size: 20px auto;
   }
