--- a/sass/blocks/form-btn.scss
+++ b/sass/blocks/form-btn.scss
@@ -28,6 +28,18 @@
   }
 }
 
+@keyframes in-progress {
+  from {color: rgba(256, 256, 256, 0.3);}
+  to {color: rgba(256, 256, 256, 0.7);}
+
+}
+
+.form-btn--in-progress {
+  animation-name: in-progress;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+}
+
 @media (min-width: 700px) {
   .form-btn {
     margin: 0;
