--- a/sass/blocks/main-header.scss
+++ b/sass/blocks/main-header.scss
@@ -6,67 +6,23 @@
 
 }
 
-.main-header__short-menu-wrapper {
-  display: flex;
+.main-header--closed {
   position: relative;
-  box-sizing: border-box;
-  border-bottom: 1px solid #000;
-  min-height: 66px;
-
-}
-
-.main-header__short-menu-wrapper--closed {
   background-color: rgba(0, 0, 0, 0.3);
   margin-bottom: -66px;
-  border-style: none;
   z-index: 2;
-}
-
-.main-header__short-menu {
-  @include container;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.main-header__toggle {
-  display: block;
-  width: 50px;
-  height: 24px;
-  font-size: 0;
-  background: url("../img/icon-menu-burger.svg") no-repeat;
-  background-size: 50px auto;
-
-
-}
-
-.main-header__toggle--closed {
-  display: block;
-  width: 24px;
-  height: 23px;
-  font-size: 0;
-  background: url("../img/icon-menu-cross.svg") no-repeat;
-  background-size: 24px auto;
 }
 
 
 @media (min-width: 700px) {
-  .main-header__short-menu {
-    align-items: flex-end;
-  }
-
-  .main-header__short-menu-wrapper {
-    min-height: 110px;
-    padding-bottom: 44px;
-  }
-
-  .main-header__short-menu-wrapper--closed {
+  .main-header--closed {
+    position: relative;
+    background-color: rgba(0, 0, 0, 0.3);
     margin-bottom: -110px;
-
+    z-index: 2;
+  }
 }
 
-
-}
 
 
 @media (min-width: 1200px) {
@@ -78,24 +34,7 @@
   }
 
 
-  .main-header__short-menu-wrapper {
-    position: absolute;
-    top: 27px;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: transparent;
-    min-height: 0;
-    padding-bottom: 0;
-    border-style: none;
-  }
 
-  .main-header__toggle--closed {
-    display: none;
-  }
-
-  .main-header__toggle {
-    display: none;
-  }
 }
 
 
