--- a/sass/blocks/main-info.scss
+++ b/sass/blocks/main-info.scss
@@ -5,9 +5,7 @@
 
 .main-info__text-wrapper {
   padding-bottom: 90px;
-  background-image: url("../img/bg-triangle-white.svg");
-  background-repeat: no-repeat;
-  background-position: bottom;
+
 }
 
 .main-info__text {
@@ -23,6 +21,10 @@
   box-sizing: border-box;
   padding-top: 35px;
   background-color: $grey-bg;
+  background-image: url("../img/bg-triangle-white.svg");
+  background-repeat: no-repeat;
+  background-position: top;
+
 }
 
 
@@ -117,10 +119,12 @@
 
   .main-info__features {
     padding-top: 0;
+
   }
 
   .main-info__feature-item {
     width: 310px;
+
     text-align: left;
   }
 
@@ -128,7 +132,10 @@
     align-items: flex-end;
     padding-top: 75px;
     padding-bottom: 30px;
-    background: $grey-bg url("../img/iphone-screen-3-tablet@1x.png") no-repeat;
+    background-color: transparent;
+    background-image:
+      url("../img/iphone-screen-3-tablet@1x.png");
+    background-repeat: no-repeat;
     background-position: left top;
     background-size: 268px auto;
   }
@@ -139,10 +146,29 @@
   }
 
   .main-info__effect-wrapper {
+    position: relative;
     padding-bottom: 118px;
     background: url("../img/icon-timer.svg") no-repeat;
     background-position: left top;
     background-size: 239px auto;
+  }
+
+  .main-info__effect-round {
+    position: absolute;
+    left: 18px;
+    top: 55px;
+    width: 175px;
+    height: 175px;
+    border: 13px solid $pink;
+    border-radius: 50%;
+  }
+
+  .main-info__effect-24 {
+    font-size: 96px;
+    line-height: 160px;
+    color: $pink;
+    font-weight: bold;
+    text-align: center;
   }
 
 }
@@ -154,6 +180,9 @@
 }
 
 @media (min-width: 1200px) {
+  .main-info__features {
+    background-size: 100%;
+  }
 
   .main-info__text {
     font-size: 50px;
@@ -162,7 +191,7 @@
 
   .main-info__text-wrapper {
     margin-top: 200px;
-    background-size: 100%;
+
   }
 
 
@@ -215,6 +244,19 @@
     padding-left: 370px;
     padding-top: 50px;
     background-size: 300px auto;
+  }
+
+  .main-info__effect-round {
+    width: 220px;
+    height: 220px;
+    top: 69px;
+    left: 20px;
+    border: 17px solid $pink;
+  }
+
+  .main-info__effect-24 {
+    font-size: 120px;
+    line-height: 200px;
   }
 
   .main-info__effect-title {
