--- a/sass/blocks/main-nav.scss
+++ b/sass/blocks/main-nav.scss
@@ -1,4 +1,4 @@
-.main-nav--closed {
+.main-nav__item--closed {
   display: none;
 }
 
@@ -22,6 +22,22 @@
   border-bottom: 1px solid #000;
 }
 
+.main-nav__item-menu {
+  display: flex;
+  justify-content: space-between;
+  box-sizing: border-box;
+  min-height: 66px;
+  width: 280px;
+  margin-left: auto;
+  margin-right: auto;
+  align-items: center;
+  border-style: none;
+}
+
+.main-nav__item:nth-child(2) {
+  outline: 1px solid #000;
+}
+
 .main-nav__link {
   font-weight: bold;
   font-size: 18px;
@@ -39,26 +55,79 @@
 
 }
 
+.main-nav__toggle {
+  display: block;
+  width: 50px;
+  height: 24px;
+  font-size: 0;
+  background: url("../img/icon-menu-burger.svg") no-repeat;
+  background-size: 50px auto;
 
+  &:hover {
+    background: url("../img/icon-menu-burger-hover.svg") no-repeat;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+}
+
+.main-nav__toggle--closed {
+  display: block;
+  width: 24px;
+  height: 23px;
+  font-size: 0;
+  background: url("../img/icon-menu-cross.svg") no-repeat;
+  background-size: 24px auto;
+
+  &:hover {
+    background: url("../img/icon-menu-cross-hover.svg") no-repeat;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+}
+
+
+@media (min-width: 700px) {
+  .main-nav__item-menu {
+    @include container;
+    min-height: 110px;
+    padding-bottom: 44px;
+    align-items: flex-end;
+  }
+}
 
 
 @media (min-width: 1200px) {
   .main-nav__list {
     display: flex;
     @include container;
-    position: relative;
-    z-index: 3;
+    min-height: 110px;
     flex-direction: row;
-    justify-content: flex-end;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    justify-content: space-between;
     text-transform: none;
   }
 
   .main-nav__item {
-    margin-left: 82px;
+    margin-left: 80px;
     border-style: none;
+    padding: 0;
+
+    align-self: center;
   }
+
+  .main-nav__item:nth-child(2) {
+    outline: none;
+  }
+
+  .main-nav__item-menu {
+    padding-bottom: 44px;
+    margin-left: 0;
+
+  }
+
 
   .main-nav__link {
     font-weight: normal;
@@ -98,8 +167,16 @@
     }
   }
 
-  .main-nav--closed {
+  .main-nav__item--closed {
     display: block;
+  }
+
+  .main-nav__toggle--closed {
+    display: none;
+  }
+
+  .main-nav__toggle {
+    display: none;
   }
 }
 
