--- a/sass/blocks/photo-edit.scss
+++ b/sass/blocks/photo-edit.scss
@@ -11,73 +11,87 @@
 
 .photo-edit__controls-wrapper {
   display: flex;
+
   flex-direction: column;
   justify-content: space-between;
 }
 
 .photo-edit__tools {
   display: flex;
-
-}
-
-.photo-edit__tools-wrapper {
-  display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-around;
   position: relative;
-  flex-grow: 1;
-  box-sizing: border-box;
   height: 160px;
-  padding-top: 42px;
+  box-sizing: border-box;
+  width: 280px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 41px;
   border-bottom: 1px solid #dddfe0;
+
 }
+
 
 .photo-edit__crop {
-  align-self: center;
+
   width: 44px;
-  height: 44px;
+  height: 48px;
   background: url("../img/icon-editor-crop.svg") no-repeat;
   background-size: 44px auto;
+  order: 1;
+
 }
 
 .photo-edit__fill {
-  align-self: center;
+
   width: 44px;
   height: 48px;
-  background: url("../img/icon-editor-fill.svg") no-repeat;
+  background: url("../img/icon-editor-fill-non-active.svg") no-repeat;
   background-size: 100%;
+  opacity: 0.3;
+  order: 2;
+
 }
 
 .photo-edit__contrast {
-  align-self: center;
+
   width: 32px;
   height: 48px;
-  background: url("../img/icon-editor-contrast.svg") no-repeat center;
+  background: url("../img/icon-editor-contrast-non-active.svg") no-repeat center;
   background-size: 32px auto;
+  opacity: 0.3;
+  order: 3;
+
 }
 
 .photo-edit__control {
-  position: absolute;
-  align-self: center;
-  top: 125px;
-  left: 50%;
+  position: relative;
+  order: 4;
+
+
+
 }
 
 .photo-edit__scale {
-  width: 202px;
+  width: 240px;
   height: 2px;
   background-color: $dark-blue;
 }
 
 .photo-edit__toggle {
   position: absolute;
-  top: -7px;
+  top: -6px;
   left: 50%;
-  width: 14px;
-  height: 14px;
+  width: 10px;
+  height: 10px;
   border: 2px solid $pink;
   border-radius: 50%;
   background-color: $grey-bg;
 }
+
+
 
 .photo-edit__img {
   width: 280px;
@@ -89,7 +103,17 @@
   display: none;
 }
 
+.photo-edit__line {
+  display: none;
+}
+
+
+
 @media (min-width: 700px) {
+  .photo-edit {
+    padding-bottom: 54px;
+  }
+
   .photo-edit__wrapper {
     flex-direction: row;
     justify-content: space-between;
@@ -98,54 +122,64 @@
   .photo-edit__img {
     width: 300px;
     height: 400px;
-
+    margin-top: 37px;
   }
 
   .photo-edit__controls-wrapper {
-    width: 300px;
+    width: 275px;
   }
 
   .photo-edit__tools {
-    flex-direction: column;
-    width: 300px;
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
+    box-sizing: border-box;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 275px;
+    height: auto;
+    border-style: none;
+    padding: 0;
   }
 
-  .photo-edit__tools-wrapper {
-    flex-direction: row;
-    flex-grow: 0;
-    width: 275px;
-    height: 73px;
-    margin-left: 25px;
-    padding-top: 0;
-    border-bottom: 1px solid #dddfe0;
-}
 
   .photo-edit__crop {
     align-self: center;
     width: 24px;
     height: 22px;
     background-size: 23px auto;
+    order: 0;
   }
 
   .photo-edit__fill {
     align-self: center;
     width: 24px;
     height: 22px;
+    background: url("../img/icon-editor-fill.svg") no-repeat;
+    background-size: 100%;
+    order: 0;
+    opacity: 1;
   }
 
   .photo-edit__contrast {
     align-self: center;
     width: 24px;
     height: 16px;
+    background: url("../img/icon-editor-contrast.svg") no-repeat center;
     background-size: 16px auto;
+    order: 0;
+    opacity: 1;
   }
 
   .photo-edit__control {
     position: relative;
-    align-self: center;
-    margin-left: 25px;
-    top: auto;
-    left: auto;
+    height: 36px;
+    margin-right: 18px;
+    padding-top: 36px;
+    order: 0;
   }
 
   .photo-edit__scale {
@@ -156,13 +190,20 @@
 
   .photo-edit__toggle {
     position: absolute;
-    top: -7px;
+    top: 29px;
     left: 50%;
-    width: 14px;
-    height: 14px;
+    width: 10px;
+    height: 10px;
     border: 2px solid $pink;
     border-radius: 50%;
     background-color: $grey-bg;
+  }
+
+  .photo-edit__line {
+    display: block;
+    width: 100%;
+    height: 1px;
+    background-color: #dddfe0;
   }
 
   .photo-edit__control--hidden {
@@ -178,15 +219,18 @@
 
   .photo-edit__wrapper {
     width: 800px;
+    margin-left: 80px;
+
   }
 
   .photo-edit__controls-wrapper {
     width: 410px;
   }
 
-  .photo-edit__tools-wrapper {
+  .photo-edit__tools {
     width: 410px;
     margin-left: 0;
+    padding: 0;
   }
 
   .photo-edit__crop {
@@ -207,7 +251,7 @@
   }
 
   .photo-edit__control {
-    margin-left: 44px;
+    margin-right: 18px;
   }
 
   .photo-edit__scale {
