--- a/sass/blocks/text-default.scss
+++ b/sass/blocks/text-default.scss
@@ -1,4 +1,8 @@
 .text-default {
+  width: $width;
+  margin: 0 auto;
+  margin-top: 22px;
+  margin-bottom: 43px;
   font-size: 14px;
   line-height: 30px;
   color: $dark-blue;
@@ -7,6 +11,18 @@
 
 @media (min-width: 700px) {
   .text-default {
+    width: 430px;
+    margin-top: 45px;
+    margin-bottom: 67px;
     font-size: 18px;
+  }
+
+
+}
+
+
+@media (min-width: 1200px) {
+  .text-default {
+    margin-top: 4px;
   }
 }
