--- a/sass/blocks/image-logo.scss
+++ b/sass/blocks/image-logo.scss
@@ -6,6 +6,34 @@
   margin-bottom: 40px;
 }
 
+
+
+.image-logo__svg:active path.image-logo__letter {
+  fill: #283645;
+  opacity: 0.3;
+}
+
+.image-logo__svg:active path.image-logo__glasses-mobile {
+  opacity: 0.3;
+}
+
+.image-logo__svg:active path.image-logo__glasses {
+  opacity: 0.3;
+}
+
+.image-logo__svg:active path.image-logo__stars {
+  fill: #283645;
+  opacity: 0.3;
+}
+
+.image-logo__svg:active path.image-logo__i-star {
+  opacity: 0.3;
+}
+
+.image-logo__svg:hover path {
+  fill: #d22856;
+}
+
 @media (min-width: 700px) {
   .image-logo {
     align-self: flex-start;
